--- a/buildout.cfg
+++ b/buildout.cfg
@@ -24,6 +24,7 @@ find-links =
 
 eggs =
     archetypes.schemaextender
+    Products.PloneHotfix20110720
 
 [versions]
 zope.component = 3.5.1
@@ -33,8 +34,9 @@ collective.plonetruegallery = 0.7.1
 [instance]
 recipe = plone.recipe.zope2instance
 zope2-location = ${zope2:location}
-user = admin:admin
-http-address = 8080
+user = admin:xxxxxxxx
+http-address = 8880
+ftp-address = 8821
 debug-mode = on
 verbose-security = on
 environment-vars =
